# ai-snippets

./: RAG-LCEL.ipynb  RAG.ipynb  README.md  llama-cpp.ipynb  pyproject.toml
fifa/: 2022.md  2026.txt
