[tool.poetry]
name = "ai-snippets"
version = "0.1.0"
description = ""
authors = ["Bob Lin <bob401710@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.1.0"
jupyterlab = "^4.0.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
