[tool.poetry]
name = "ai-snippets"
version = "0.1.0"
description = ""
authors = ["Bob Lin <bob401710@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.1.0"
jupyterlab = "^4.0.10"
langchain-community = "^0.0.10"
langchain-openai = "^0.0.2"
faiss-cpu = "^1.7.4"
unstructured = "^0.11.8"
markdown = "^3.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
